Fixed error alert interface orientation to match allowed interface orientations, UI foxes for new iphones, sample app build 24

--- a/goSellSDK/UI/Resources/Payment.storyboard
+++ b/goSellSDK/UI/Resources/Payment.storyboard
@@ -1446,7 +1446,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="45" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Ley-Dk-vza">
-                                <rect key="frame" x="0.0" y="110" width="375" height="464"/>
+                                <rect key="frame" x="0.0" y="110" width="375" height="498"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 <prototypes>
@@ -1549,7 +1549,7 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="l9s-Zx-VgC" firstAttribute="leading" secondItem="0fC-Iy-KcF" secondAttribute="leading" id="AHc-Fx-DPf"/>
-                            <constraint firstItem="PP4-1A-r0F" firstAttribute="top" secondItem="Ley-Dk-vza" secondAttribute="bottom" id="Fw6-Tf-Xb7"/>
+                            <constraint firstAttribute="bottom" secondItem="Ley-Dk-vza" secondAttribute="bottom" id="Fw6-Tf-Xb7"/>
                             <constraint firstItem="s1H-Lr-YOI" firstAttribute="leading" secondItem="0fC-Iy-KcF" secondAttribute="leading" id="HQZ-YA-cmx"/>
                             <constraint firstItem="s1H-Lr-YOI" firstAttribute="bottom" secondItem="WKE-Op-cCz" secondAttribute="bottom" constant="66" id="O3E-F3-ovJ"/>
                             <constraint firstAttribute="trailing" secondItem="s1H-Lr-YOI" secondAttribute="trailing" id="VEr-tW-khr"/>
